# rustFile-FolderEncrypter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: crypto.rs  main.rs  progress.rs  streaming.rs
