[package]
name = "file_encryptor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure file and directory encryption tool"

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
clap = { version = "4.3.0", features = ["derive"] }
rand = "0.8.5"
sha2 = "0.10.6"
anyhow = "1.0.71"
indicatif = "0.17.3"  # For progress bars (optional enhancement)